@@ -715,6 +715,11 @@ to Euros and vice-versa.
 simulating/analyzing mass spectrometric data on a variety of polymers. 
 </ul>
 
+<ul>
+<li><a href="http://www.netcologne.de/~nc-eisenlpe2/xmms-crossfade">XMMS-Crossfade</a>
+- A Crossfading/Gapless Plugin for XMMS.
+</ul>
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
